// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Rating with basic theme applied OldRating renders correctly 1`] = `
<View
  pointerEvents="auto"
  style={undefined}
>
  <View
    onMoveShouldSetResponder={[Function]}
    onMoveShouldSetResponderCapture={[Function]}
    onResponderEnd={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderReject={[Function]}
    onResponderRelease={[Function]}
    onResponderStart={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    onStartShouldSetResponderCapture={[Function]}
    style={
      Object {
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        Object {
          "flexDirection": "row",
          "left": 0,
          "position": "absolute",
          "top": 0,
        }
      }
    >
      <View
        collapsable={undefined}
        style={
          Object {
            "backgroundColor": "#f1c40f",
            "height": 60,
            "width": 150,
          }
        }
      />
      <View
        collapsable={undefined}
        style={
          Object {
            "backgroundColor": "white",
            "height": 60,
            "width": 150,
          }
        }
      />
    </View>
    <View
      style={undefined}
    >
      <Image
        source={
          Object {
            "testUri": "../../react-native-elements/src/rating/images/star.png",
          }
        }
        style={
          Object {
            "height": 60,
            "width": 60,
          }
        }
      />
    </View>
    <View
      style={undefined}
    >
      <Image
        source={
          Object {
            "testUri": "../../react-native-elements/src/rating/images/star.png",
          }
        }
        style={
          Object {
            "height": 60,
            "width": 60,
          }
        }
      />
    </View>
    <View
      style={undefined}
    >
      <Image
        source={
          Object {
            "testUri": "../../react-native-elements/src/rating/images/star.png",
          }
        }
        style={
          Object {
            "height": 60,
            "width": 60,
          }
        }
      />
    </View>
    <View
      style={undefined}
    >
      <Image
        source={
          Object {
            "testUri": "../../react-native-elements/src/rating/images/star.png",
          }
        }
        style={
          Object {
            "height": 60,
            "width": 60,
          }
        }
      />
    </View>
    <View
      style={undefined}
    >
      <Image
        source={
          Object {
            "testUri": "../../react-native-elements/src/rating/images/star.png",
          }
        }
        style={
          Object {
            "height": 60,
            "width": 60,
          }
        }
      />
    </View>
  </View>
</View>
`;

exports[`Rating with basic theme applied Rating renders correctly 1`] = `
<View
  pointerEvents="auto"
  style={
    Object {
      "backgroundColor": "red",
    }
  }
>
  <View
    onMoveShouldSetResponder={[Function]}
    onMoveShouldSetResponderCapture={[Function]}
    onResponderEnd={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderReject={[Function]}
    onResponderRelease={[Function]}
    onResponderStart={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    onStartShouldSetResponderCapture={[Function]}
    style={
      Object {
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        Object {
          "flexDirection": "row",
          "left": 0,
          "position": "absolute",
          "top": 0,
        }
      }
    >
      <View
        collapsable={undefined}
        style={
          Object {
            "backgroundColor": "#f1c40f",
            "height": 60,
            "width": 150,
          }
        }
      />
      <View
        collapsable={undefined}
        style={
          Object {
            "backgroundColor": "white",
            "height": 60,
            "width": 150,
          }
        }
      />
    </View>
    <View
      style={undefined}
    >
      <Image
        source={
          Object {
            "testUri": "../../react-native-elements/src/rating/images/star.png",
          }
        }
        style={
          Object {
            "height": 60,
            "width": 60,
          }
        }
      />
    </View>
    <View
      style={undefined}
    >
      <Image
        source={
          Object {
            "testUri": "../../react-native-elements/src/rating/images/star.png",
          }
        }
        style={
          Object {
            "height": 60,
            "width": 60,
          }
        }
      />
    </View>
    <View
      style={undefined}
    >
      <Image
        source={
          Object {
            "testUri": "../../react-native-elements/src/rating/images/star.png",
          }
        }
        style={
          Object {
            "height": 60,
            "width": 60,
          }
        }
      />
    </View>
    <View
      style={undefined}
    >
      <Image
        source={
          Object {
            "testUri": "../../react-native-elements/src/rating/images/star.png",
          }
        }
        style={
          Object {
            "height": 60,
            "width": 60,
          }
        }
      />
    </View>
    <View
      style={undefined}
    >
      <Image
        source={
          Object {
            "testUri": "../../react-native-elements/src/rating/images/star.png",
          }
        }
        style={
          Object {
            "height": 60,
            "width": 60,
          }
        }
      />
    </View>
  </View>
</View>
`;

exports[`Rating with no theme applied OldRating and Rating returns the same thing if no theme is applied 1`] = `"[2mCompared values have no visual difference.[22m"`;

exports[`Rating with no theme applied OldRating renders correctly 1`] = `
<View
  pointerEvents="auto"
  style={undefined}
>
  <View
    onMoveShouldSetResponder={[Function]}
    onMoveShouldSetResponderCapture={[Function]}
    onResponderEnd={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderReject={[Function]}
    onResponderRelease={[Function]}
    onResponderStart={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    onStartShouldSetResponderCapture={[Function]}
    style={
      Object {
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        Object {
          "flexDirection": "row",
          "left": 0,
          "position": "absolute",
          "top": 0,
        }
      }
    >
      <View
        collapsable={undefined}
        style={
          Object {
            "backgroundColor": "#f1c40f",
            "height": 60,
            "width": 150,
          }
        }
      />
      <View
        collapsable={undefined}
        style={
          Object {
            "backgroundColor": "white",
            "height": 60,
            "width": 150,
          }
        }
      />
    </View>
    <View
      style={undefined}
    >
      <Image
        source={
          Object {
            "testUri": "../../react-native-elements/src/rating/images/star.png",
          }
        }
        style={
          Object {
            "height": 60,
            "width": 60,
          }
        }
      />
    </View>
    <View
      style={undefined}
    >
      <Image
        source={
          Object {
            "testUri": "../../react-native-elements/src/rating/images/star.png",
          }
        }
        style={
          Object {
            "height": 60,
            "width": 60,
          }
        }
      />
    </View>
    <View
      style={undefined}
    >
      <Image
        source={
          Object {
            "testUri": "../../react-native-elements/src/rating/images/star.png",
          }
        }
        style={
          Object {
            "height": 60,
            "width": 60,
          }
        }
      />
    </View>
    <View
      style={undefined}
    >
      <Image
        source={
          Object {
            "testUri": "../../react-native-elements/src/rating/images/star.png",
          }
        }
        style={
          Object {
            "height": 60,
            "width": 60,
          }
        }
      />
    </View>
    <View
      style={undefined}
    >
      <Image
        source={
          Object {
            "testUri": "../../react-native-elements/src/rating/images/star.png",
          }
        }
        style={
          Object {
            "height": 60,
            "width": 60,
          }
        }
      />
    </View>
  </View>
</View>
`;

exports[`Rating with no theme applied Rating renders correctly 1`] = `
<View
  pointerEvents="auto"
  style={undefined}
>
  <View
    onMoveShouldSetResponder={[Function]}
    onMoveShouldSetResponderCapture={[Function]}
    onResponderEnd={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderReject={[Function]}
    onResponderRelease={[Function]}
    onResponderStart={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    onStartShouldSetResponderCapture={[Function]}
    style={
      Object {
        "flexDirection": "row",
      }
    }
  >
    <View
      style={
        Object {
          "flexDirection": "row",
          "left": 0,
          "position": "absolute",
          "top": 0,
        }
      }
    >
      <View
        collapsable={undefined}
        style={
          Object {
            "backgroundColor": "#f1c40f",
            "height": 60,
            "width": 150,
          }
        }
      />
      <View
        collapsable={undefined}
        style={
          Object {
            "backgroundColor": "white",
            "height": 60,
            "width": 150,
          }
        }
      />
    </View>
    <View
      style={undefined}
    >
      <Image
        source={
          Object {
            "testUri": "../../react-native-elements/src/rating/images/star.png",
          }
        }
        style={
          Object {
            "height": 60,
            "width": 60,
          }
        }
      />
    </View>
    <View
      style={undefined}
    >
      <Image
        source={
          Object {
            "testUri": "../../react-native-elements/src/rating/images/star.png",
          }
        }
        style={
          Object {
            "height": 60,
            "width": 60,
          }
        }
      />
    </View>
    <View
      style={undefined}
    >
      <Image
        source={
          Object {
            "testUri": "../../react-native-elements/src/rating/images/star.png",
          }
        }
        style={
          Object {
            "height": 60,
            "width": 60,
          }
        }
      />
    </View>
    <View
      style={undefined}
    >
      <Image
        source={
          Object {
            "testUri": "../../react-native-elements/src/rating/images/star.png",
          }
        }
        style={
          Object {
            "height": 60,
            "width": 60,
          }
        }
      />
    </View>
    <View
      style={undefined}
    >
      <Image
        source={
          Object {
            "testUri": "../../react-native-elements/src/rating/images/star.png",
          }
        }
        style={
          Object {
            "height": 60,
            "width": 60,
          }
        }
      />
    </View>
  </View>
</View>
`;
